export interface ITimer {
  start();
  stop(): number;
}
